# Molsketch

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG  CMakeLists.txt  INSTALL  Jenkinsfile  Molsketch.pro  MolsketchTests.pro  TODO  ValenceTest.h  abstractxmlobjectunittest.h  actioncomponenttest.h  android.pro  arrowpopupacceptancetest.h  arrowunittest.h  atomdrawingtest.h  atompopupacceptancetest.h  atompopupunittest.h  atomunittest.h  bonddrawingtest.h  bondreadertest.h  boundingboxlinkerunittest.h  boundingrectassertion.cpp  buildvariables  chargehydrogenactionacceptancetest.h  childitemcommandunittest.h  clipboardtest.h  cmake_uninstall.cmake.in  coordinatemodelunittest.h  coordinatestest.h  coordinatetableviewunittest.h  deleteactiontest.h  drawactionacceptancetest.h  drawingtest.cpp  findOpenBabel.pri  fontchooserunittest.h  generateTranslations.cmake  graphicsitemunittest.h  instancecounters.cpp  (+65 more)
libmolsketch/: CMakeLists.txt  TextInputItem.cpp  TextInputItem.h  abstractxmlobject.cpp  abstractxmlobject.h  alignrowdialog.ui  arrow.cpp  arrow.h  arrowpopup.cpp  arrowpopup.h  arrowpopup.ui  atom.cpp  atom.h  atompopup.cpp  atompopup.h  atompopup.ui  bond.cpp  bond.h  boundingboxlinker.cpp  boundingboxlinker.h  colorbutton.cpp  colorbutton.h  commands.cpp  commands.h  constants.h  coordinatedelegate.cpp  coordinatedelegate.h  coordinatemodel.cpp  coordinatemodel.h  coordinatetableview.cpp  coordinatetableview.h  electronsystem.cpp  electronsystem.h  element.cpp  element.h  elementalignment.cpp  elementalignment.h  elementalignment.ui  fileio.cpp  fileio.h  (+80 more)
libmolsketch/actions/: abstractitemaction.cpp  abstractitemaction.h  abstractrecursiveitemaction.cpp  abstractrecursiveitemaction.h  alignmentaction.cpp  alignmentaction.h  arrowtypeaction.cpp  arrowtypeaction.h  arrowtypewidget.cpp  arrowtypewidget.h  bondtypeaction.cpp  bondtypeaction.h  bondtypewidget.cpp  bondtypewidget.h  coloraction.cpp  coloraction.h  connectaction.cpp  connectaction.h  deleteaction.cpp  deleteaction.h  drawaction.cpp  drawaction.h  flipbondaction.cpp  flipbondaction.h  flipstereobondsaction.cpp  flipstereobondsaction.h  frameaction.cpp  frameaction.h  frametypeaction.cpp  frametypeaction.h  frametypewidget.cpp  frametypewidget.h  genericaction.cpp  genericaction.h  incdecaction.cpp  incdecaction.h  itemgrouptypeaction.cpp  itemgrouptypeaction.h  itemtypeaction.cpp  itemtypeaction.h  (+28 more)
libmolsketch/src/: CMakeLists.txt  TextInputItem.cpp  TextInputItem.h  abstractitemaction.cpp  abstractitemaction.h  abstractxmlobject.cpp  abstractxmlobject.h  arrow.cpp  arrow.h  arrowpopup.cpp  arrowpopup.h  arrowpopup.ui  atom.cpp  atom.h  atomnumberitem.cpp  atomnumberitem.h  atompopup.cpp  atompopup.h  atompopup.ui  bond.cpp  bond.h  coloraction.cpp  coloraction.h  commands.cpp  commands.h  coordinatedelegate.cpp  coordinatedelegate.h  coordinatemodel.cpp  coordinatetableview.cpp  coordinatetableview.h  electronsystem.h  element.cpp  element.h  fileio.cpp  fileio.h  frame.cpp  frame.h  graphicsitem.cpp  graphicsitem.h  graphsymitem.cpp  (+60 more)
libmolsketch/tools/: toolicons.qrc
molsketch/: CMakeLists.txt  actioncontainer.cpp  actioncontainer.h  applicationsettings.cpp  applicationsettings.h  colorbutton.cpp  colorbutton.h  configurationupdates.cpp  configurationupdates.h  drawwidget.ui  helpforemptytoolbox.cpp  helpforemptytoolbox.h  icon.rc  indicator.cpp  indicator.h  librarylistwidget.cpp  librarylistwidget.h  librarytoolbox.cpp  librarytoolbox.h  licensedialog.cpp  licensedialog.h  licensedialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  molsketch.desktop  molsketch.pro  molsketch.qrc  molsketch.xml  molsketch_de.ts  molsketch_el.ts  molsketch_zh.ts  net.sourceforge.molsketch.appdata.xml  obabelifaceloader.cpp  obabelifaceloader.h  optimizestructureaction.cpp  optimizestructureaction.h  oxygenicons.qrc  pathinput.cpp  pathinput.h  (+16 more)
molsketch/images/: molsketch.xpm
molsketch/oxygen-icons/: index.theme  license
molsketch/src/: CMakeLists.txt  drawwidget.cpp  drawwidget.ui  helpforemptytoolbox.cpp  librarylistwidget.cpp  librarylistwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  molsketch.desktop  molsketch.qrc  oxygenicons.qrc  settings.cpp  settings.h  settings.ui  src.pro
obabeliface/: CMakeLists.txt  findOpenBabel.cmake  findOpenBabel.pri  obabeliface.cpp  obabeliface.h  obabeliface.pro
src/: CMakeLists.txt  TextInputItem.cpp  TextInputItem.h  atom.cpp  atom.h  atomnumberitem.cpp  atomnumberitem.h  bond.cpp  bond.h  commands.cpp  commands.h  drawwidget.cpp  drawwidget.h  drawwidget.ui  electronsystem.cpp  element.cpp  element.h  fileio.cpp  fileio.h  graphicsitemtypes.h  graphsymitem.cpp  graphsymitem.h  itemplugin.cpp  itemplugin.h  main.cpp  mainwindow.cpp  mainwindow.h  math2d.h  mechanismarrow.cpp  mechanismarrow.h  mechanismarrowdialog.cpp  mimemolecule.cpp  mimemolecule.h  minimise.cpp  minimise.h  molecule.cpp  molecule.h  molinputitem.h  mollibitem.cpp  mollibitem.h  (+28 more)
src/i18n/: CMakeLists.txt  molsketch_cs.ts  molsketch_nl.ts  molsketch_pt_BR.ts
src/part/: CMakeLists.txt  molsketch_factory.cpp  molsketch_factory.h  molsketchpart.cpp  molsketchpart.h  molsketchpart.rc  molsketchpart_shell.cpp  molsketchpart_shell.h  (+2 more)
tests/: CMakeLists.txt  abstractxmlobjectunittest.h  arrowunittest.h  atomdrawingtest.h  atompopupacceptancetest.h  atomunittest.h  bonddrawingtest.h  bondreadertest.h  boundingboxlinkerunittest.h  boundingrectassertion.h  chargehydrogenactionacceptancetest.h  checkIcons.sh  clipboardtest.h  coordinatestest.cpp  coordinatestest.h  coordinatetableviewunittest.h  deleteactiontest.h  drawactionacceptancetest.h  drawingtest.cpp  fileinputoutputtest.h  graphicsitemunittest.h  instancecounters.cpp  itemcommandunittest.h  itemtypeselectionactionunittest.h  legacyfilereadertest.h  lineupactiontest.h  listassertion.h  lonepairunittest.h  main.cpp  mainwindowacceptancetest.h  mimeinsertionperformancetest.h  mocks.cpp  mocks.h  moleculelibraryacceptancetest.h  moleculetest.cpp  moleculetest.h  moleculeunittest.h  molsceneregressiontest.h  molsceneunittest.h  noargsignalcounter.h  (+28 more)
(+142 files in other folders)
